Part1: Bug Fix: Screen size range: up to 640px problem-1: button 'En savoir plus' overlaps with restaurant description text. correction-1: the media query for screens of size 640px and smaller was corrected. String: 	.resto { 		min-height: 570px; 	} was replaced with 	.resto { 		padding-bottom: 50px; 	}

--- a/css/style.css
+++ b/css/style.css
@@ -123,54 +123,54 @@ h2 {
 	h2 {
 		margin: 0 0 1em;
 	}
-
 }
 @media screen and (max-width:640px) {
-	body { border :none;}
+	body { 
+        border :none;
+	}
 	.container {
-	width: 100%;
+	    width: 100%;
 	}
 	figure, figure.float-droite, .content {
 		float:none;
 		width: 100%
 	}
-
 	.adresse, .tel {
 		position: static;
 		text-align: left;
 		margin: 0.5em 0;
 	}
 	.resto {
-		min-height: 570px;
+		padding-bottom: 50px;
 	}
 	h2 {
 		margin:0 0 0.5em;
 	}
-/* notre menu pour le mobile */
-.menu-toggle {
-	display: block;
-	padding: 10px;
-}
-nav {
-	display: none;
-	text-align: left;
-}
-nav ul {
-	padding: 0;
-	list-style-type: none;
-}
-nav ul li {
-	display: block;
-}
-nav ul li a {
-	display: block;
-	text-decoration: none;
-	color:orange;
-	background-color: white;
-	transition: all .5s;
-	border-radius: 0;
-}
-.open {
-	display: block;}
-}
+    /* notre menu pour le mobile */
+    .menu-toggle {
+	    display: block;
+	    padding: 10px;
+    }
+    nav {
+	    display: none;
+	    text-align: left;
+    }
+    nav ul {
+	    padding: 0;
+	    list-style-type: none;
+    }
+    nav ul li {
+	    display: block;
+    }
+    nav ul li a {
+	    display: block;
+	    text-decoration: none;
+	    color:orange;
+	    background-color: white;
+	    transition: all .5s;
+	    border-radius: 0;
+    }
+    .open {
+	    display: block;
+    }
 }
